Adds class attribute to P and list

--- a/módulos/fundamentos/bloco-3-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index.html
+++ b/módulos/fundamentos/bloco-3-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index.html
@@ -11,13 +11,16 @@
        #unorderedlist{
            background-color: aqua;
        }
+       .PandList{
+           background-color: blue;
+       }
 
     </style>
   </head>
   <body>
     <h1>Exercícios 3.2</h1>
-    <p>Qual é a sua cor favorita?</p>
-    <ul id="unorderedlist">
+    <p class="PandList">Qual é a sua cor favorita?</p>
+    <ul class="PandList">
       <li>Amarelo</li>
       <li>Vermelho</li>
       <li>Marrom</li>
