--- a/módulos/fundamentos/bloco-3-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index.html
+++ b/módulos/fundamentos/bloco-3-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index.html
@@ -3,24 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>HTML</title>
-    <style>
-        h1{
-            font-style: italic;
-            line-height: 2px;
-            text-align: center;
-            text-decoration: dotted;
-            font-family: sans-serif, Arial;
-        }
-        p{
-            font-weight: 600;
-            font-size: 3em;
-            text-align: center;
-        }
-        body{
-            font-size: 16px;
-            background-color: blue
-        }
-    </style>
+<link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1>Exercícios 3.2</h1>
