--- a/fundamentos/bloco-03-introducao-a-html-e-CSS/dia-4-html-semantico/index.html
+++ b/fundamentos/bloco-03-introducao-a-html-e-CSS/dia-4-html-semantico/index.html
@@ -23,24 +23,42 @@
         <div class="divspremiacao">
           <h3>Premiação Primeiro Lugar:</h3>
         </div>
-            <ul>
-                <li>| R$ 1000,00 por integrante da equipe |</li>
-                <li>| Bootcamp de 2 meses com possibilidade de contratação |</li>
-            </ul>
+            <div class="testedivsprize">
+                <ul class="PrizeList">
+                    <div class="firstprize1">
+                        <li>| R$ 1000,00 por integrante da equipe |</li>
+                    </div>
+                    <div class="firstprize2">
+                        <li>| Bootcamp de 2 meses com possibilidade de contratação |</li>
+                    </div>
+                </ul>
+                </div>
         <div class="divspremiacao">
           <h3>Premiação Segundo Lugar:</h3>
         </div>
-            <ul>
-                <li>| R$ 600,00 por integrante da equipe |</li>
-                <li>| Participação no processo seletivo para o Bootcamp |</li>
-            </ul>
+            <div class="testedivsprize">
+                <ul class="PrizeList">
+                    <div class="secondprize1">
+                        <li>| R$ 600,00 por integrante da equipe |</li>
+                    </div>
+                    <div class="secondprize2">
+                        <li>| Participação no processo seletivo para o Bootcamp |</li>
+                    </div>
+                </ul>
+            </div>
         <div class="divspremiacao">
           <h3>Premiação Terceiro Lugar:</h3>
         </div>
-            <ul>
-                <li>| R$ 300,00 por integrante da equipe |</li>
-                <li>| Participação no processo seletivo para o Bootcamp |</li>
-            </ul>
+            <div class="testedivsprize">
+                <ul class="PrizeList">
+                    <div class="thirdprize1">
+                        <li>| R$ 300,00 por integrante da equipe |</li>
+                    </div>
+                    <div class="thirdprize2">
+                        <li>| Participação no processo seletivo para o Bootcamp |</li>
+                    </div>
+                </ul>
+            </div>
     </section>
   </body>
 </html>
