adding header at stomatopoda

--- a/fundamentos/bloco-03-introducao-a-html-e-CSS/dia-4-html-semantico/index.html
+++ b/fundamentos/bloco-03-introducao-a-html-e-CSS/dia-4-html-semantico/index.html
@@ -1,64 +1,12 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html>
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ranking</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" /> 
+    <title>Stomatopoda by Gustavo Weiss</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <header>
-      <h1>Hackathon Results</h1>
-    </header>
-    <section>
-      <ul id="podiumList">
-        <div class="firstplacepodium"><li class="first">1º - Equipe 1</li></div>
-            <div class="secondAndThird">
-                <div class="secondplacepodium"><li class="second">2º - Equipe 2</li></div>
-                <div class="thirdplacepodium"><li class="third">3º - Equipe 3</li></div>
-            </div>
-      </ul>
-    </section>
-    <section>
-        <div class="divspremiacao">
-          <h3>Premiação Primeiro Lugar:</h3>
-        </div>
-            <div class="testedivsprize">
-                <ul class="PrizeList">
-                    <div class="firstprize1">
-                        <li>| R$ 1000,00 por integrante da equipe |</li>
-                    </div>
-                    <div class="firstprize2">
-                        <li>| Bootcamp de 2 meses com possibilidade de contratação |</li>
-                    </div>
-                </ul>
-                </div>
-        <div class="divspremiacao">
-          <h3>Premiação Segundo Lugar:</h3>
-        </div>
-            <div class="testedivsprize">
-                <ul class="PrizeList">
-                    <div class="secondprize1">
-                        <li>| R$ 600,00 por integrante da equipe |</li>
-                    </div>
-                    <div class="secondprize2">
-                        <li>| Participação no processo seletivo para o Bootcamp |</li>
-                    </div>
-                </ul>
-            </div>
-        <div class="divspremiacao">
-          <h3>Premiação Terceiro Lugar:</h3>
-        </div>
-            <div class="testedivsprize">
-                <ul class="PrizeList">
-                    <div class="thirdprize1">
-                        <li>| R$ 300,00 por integrante da equipe |</li>
-                    </div>
-                    <div class="thirdprize2">
-                        <li>| Participação no processo seletivo para o Bootcamp |</li>
-                    </div>
-                </ul>
-            </div>
-    </section>
+    <header>Soco a 80km/h: Conheça o Stomatopoda</header>
   </body>
 </html>
