--- a/fundamentos/bloco-03-introducao-a-html-e-CSS/dia-4-html-semantico/index.html
+++ b/fundamentos/bloco-03-introducao-a-html-e-CSS/dia-4-html-semantico/index.html
@@ -8,5 +8,12 @@
   </head>
   <body>
     <header>Soco a 80km/h: Conheça o Stomatopoda</header>
+
+    <nav>
+        <div class="navlinks"><a href="">Página inicial</a></div>
+        <div class="navlinks"><a href="">Sobre</a></div>
+        <div class="navlinks"><a href="">Contato</a></div>
+    </nav>
+
   </body>
 </html>
