Introduction exercise: getting elements by class and tag names and changing style of one of the elements.

--- a/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-1-javascript-dom-e-seletores/index_fixacao.html
+++ b/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-1-javascript-dom-e-seletores/index_fixacao.html
@@ -3,16 +3,10 @@
   <body>
     <header>
       <h2 id="page-title">Título</h2>
-      <p id="paragraph">Dê uma cor para este parágrafo!</p>
+      <p class="paragraph_test">Dê uma cor para este parágrafo!</p>
       <h4 id="subtitle">Subtítulo</h4>
-      <p id="second-paragraph">Segundo parágrafo!</p>
+      <p class="paragraph_test">Segundo parágrafo!</p>
     </header>
-    <script>
-      const paragraph = document.getElementById("paragraph");
-      paragraph.style.color = "red";
-      document.getElementById("page-title").innerText = "Identidade Bourne";
-      document.getElementById("second-paragraph").innerText = "'Filme ganhador do Oscar na categoria aventura.'";
-      document.getElementById("subtitle").innerText = "Premiações:";
-    </script>
+    <script src="script.js" ></script>
   </body>
 </html>
