feat:  part2- creating a main, adding a className and appending it to the body

--- a/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/index.html
+++ b/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/index.html
@@ -62,6 +62,11 @@
       let headingOneContent = document.createElement('h1');
       headingOneContent.innerHTML = 'Exercício 5.2 - JavaScript DOM';
       document.body.appendChild(headingOneContent);
+      // 2-Adicione a tag main com a classe main-content como filho da tag body ;
+      let creatingMain = document.createElement('main');
+      creatingMain.className = 'main-content';
+      document.body.appendChild(creatingMain);
+      // 
     </script>
   </body>
 </html>
