--- a/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/index.html
+++ b/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/index.html
@@ -66,7 +66,15 @@
       let creatingMain = document.createElement('main');
       creatingMain.className = 'main-content';
       document.body.appendChild(creatingMain);
-      // 
+      // 3- Adicione a tag section com a classe center-content como filho da tag main criada no passo 2;
+      let elementSection = document.createElement('section');
+      elementSection.className = 'center-content';
+      creatingMain.appendChild(elementSection); 
+      // 4- Adicione a tag p como filho do section criado no passo 3 e coloque algum texto;
+      let elementP = document.createElement('p');
+      elementP.innerHTML = 'Texto referente ao parágrafo P';
+      elementSection.appendChild(elementP);
+      
     </script>
   </body>
 </html>
