--- a/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/index.html
+++ b/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/index.html
@@ -74,7 +74,14 @@
       let elementP = document.createElement('p');
       elementP.innerHTML = 'Texto referente ao parágrafo P';
       elementSection.appendChild(elementP);
-      
+      // 5- Adicione a tag section com a classe left-content como filho da tag main criada no passo 2;
+      let leftSection = document.createElement('section');
+      leftSection.className = 'left-content';
+      creatingMain.appendChild(leftSection);
+      //6- Adicione a tag `section` com a classe `right-content` como filho da tag `main` criada no passo 2;
+      let rightSection = document.createElement('section');
+      rightSection.className = 'right-content';
+      creatingMain.appendChild(rightSection);
     </script>
   </body>
 </html>
