feat: parts 7,8- adding an image and an unorderedlist with a for loop to populate li

--- a/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/index.html
+++ b/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/index.html
@@ -82,6 +82,22 @@
       let rightSection = document.createElement('section');
       rightSection.className = 'right-content';
       creatingMain.appendChild(rightSection);
+      // Adicione uma imagem com src configurado para o valor https://picsum.photos/200 e classe small-image . Esse elemento deve ser filho do section criado no passo 5;
+      // reference: https://moonbooks.org/Articles/How-to-add-an-image-in-a-HTML-page-using-javascript-/
+      let photoOfLeftSection = document.createElement('img');
+      photoOfLeftSection.src = 'https://picsum.photos/200';
+      photoOfLeftSection.className = 'small-image';
+      leftSection.appendChild(photoOfLeftSection);
+      // 8- Adicione uma lista não ordenada com os valores de 1 a 10 por extenso, ou seja, um , dois , três , ... como valores da lista. Essa lista deve ser filha do section criado no passo 6;
+      const listUntilTen = document.createElement('ul');
+      rightSection.appendChild(listUntilTen);
+      const arrNumbers = ['um', 'dois', 'três', 'quatro', 'cinco', 'seis', 'sete', 'oito', 'nove', 'dez'];
+      for (let num in arrNumbers) {
+        const elementsLi = document.createElement('li');
+        elementsLi.innerHTML = arrNumbers[num];
+        listUntilTen.appendChild(elementsLi);
+      }
+
     </script>
   </body>
 </html>
