--- a/fundamentos/dia-4-css-flexbox-parte-2/index.html
+++ b/fundamentos/dia-4-css-flexbox-parte-2/index.html
@@ -1,4 +1,4 @@
-<!-- Adicione uma propriedade que defina o tamanho Flexbox base para o container da imagem 268px e para o container do menu 500px . Após aplicar as propriedades o header deverá estar similar a imagem abaixo: -->
+<!-- 2-Adicione uma propriedade Flexbox que modifique a ordem em que a logomarca e os itens do menu aparecem na tela. Após aplicar a propriedade o header deverá estar similar a imagem abaixo: -->
 <!DOCTYPE html>
 <html lang="pt">
   <head>
@@ -23,6 +23,5 @@
         />
       </section>
     </header>
-
   </body>
 </html>
