--- a/fundamentos/dia-4-css-flexbox-parte-2/index.html
+++ b/fundamentos/dia-4-css-flexbox-parte-2/index.html
@@ -1,4 +1,4 @@
-<!-- 2-Adicione uma propriedade Flexbox que modifique a ordem em que a logomarca e os itens do menu aparecem na tela. Após aplicar a propriedade o header deverá estar similar a imagem abaixo: -->
+<!-- 3-Adicione uma propriedade Flexbox que faça o container do menu crescer, quando houver espaço disponível. Após aplicar a propriedade o header deverá estar similar a imagem abaixo: -->
 <!DOCTYPE html>
 <html lang="pt">
   <head>
