exercise part1- added align-self center to menu-container

--- a/fundamentos/dia-4-css-flexbox-parte-2/index.html
+++ b/fundamentos/dia-4-css-flexbox-parte-2/index.html
@@ -1,4 +1,4 @@
-<!-- 3-Adicione uma propriedade Flexbox que faça o container do menu crescer, quando houver espaço disponível. Após aplicar a propriedade o header deverá estar similar a imagem abaixo: -->
+<!-- 4-Utilize a propriedade align-self no elemento correto para que o header da página tenha o seguinte comportamento: -->
 <!DOCTYPE html>
 <html lang="pt">
   <head>
