exercise parte2- added flex-grow to movie-container

--- a/fundamentos/dia-4-css-flexbox-parte-2/index.html
+++ b/fundamentos/dia-4-css-flexbox-parte-2/index.html
@@ -1,4 +1,4 @@
-<!-- 3 - Adicione uma propriedade que faça com que seu container de filmes tenha uma base de 700px e outra base de 16% para as div do container de seu card. Deve ficar similar a imagem abaixo: -->
+<!-- 4 - Aplique uma propriedade com o valor 10 que expanda o container de filmes. Deve ficar similar a imagem abaixo: -->
 <!DOCTYPE html>
 <html lang="pt">
   <head>
