--- a/fundamentos/bloco-6-html-e-css-forms-flexbox-e-responsivo/dia-1-html-css-forms/form.html
+++ b/fundamentos/bloco-6-html-e-css-forms-flexbox-e-responsivo/dia-1-html-css-forms/form.html
@@ -5,44 +5,56 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bloco-6-6.1-html-e-css-forms</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet"href="style.css">
 </head>
 <body>
   <header>
-    <h1>Formulário-bloco-6-6.1-html-e-css-forms</h1>
+    <h1 class="container text-center" >Formulário-bloco-6-6.1-html-e-css-forms</h1>
   </header>
-  <main>
-    <fieldset>
+  <main class="container shadow-sm p-3 mb-5 bg-body rounded">
+    <form class="container" action="" method ='get' id="forms">
       <legend>Dados pessoais:</legend>
       <label for="username">Nome: </label> 
-      <input type="text" required name='name' id='username' maxlength="40" placeholder='Digite seu nome'>
+      <input class="container" type="text" required name='name' id='username' maxlength="40" placeholder='Digite seu nome'>
       <label for="e-mail">Email: </label>
-       <input type="email" required name='email' id='email' maxlength="50" placeholder='Digite seu email'>
+       <input class="container" type="email" required name='email' id='email' maxlength="50" placeholder='Digite seu email'>
       <label for="user-cpf">CPF: </label> 
-      <input type="number" required name='cpf' id="userCpf" maxlength="11" placeholder='Digite seu cpf'>
-      <br>
-      <br>
+      <input class="container" type="number" required name='cpf' id="userCpf" maxlength="11" placeholder='Digite seu cpf'>
+    <div id="addressDiv" class="d-grid gap-3">
       <label for="endereco">Endereço: </label>
       <input type="text" required name='address' id="endereco" maxlength="200" placeholder='Digite seu endereço'>
-      <br>
-      <br>
       <label for="city">Cidade: </label>
       <input type="text" required name='city' id="city" maxlength="28" placeholder='Digite sua cidade'>
       <label for="input-estado">Estado: 
-      <select required name='estado' id='input-estado'>
+      <select class="form-select" required name='estado' id='input-estado'>
       </select>
       </label>
-      <label for="">Tipo de moradia: </label>
-      <input type="radio" id="casa" name="moradia" value="house" checked>Casa
-      <input type="radio" id="apartamento" name="moradia" value="apartment">Apartamento
-    </fieldset>
-    <fieldset>
+      <div class="form-check-inline">
+        <label for="">Tipo de moradia: </label>
+        <input type="radio" id="casa" name="moradia" value="house" checked>Casa
+        <input type="radio" id="apartamento" name="moradia" value="apartment">Apartamento
+      </div>
+    </div>
       <legend>Dados profissionais</legend>
       <label for="textCurriculum" id="curriculum">Resumo do currículo</label>
       <br>
       <textarea required id="textCurriculum" name="textCurriculum" maxlength="1000" rows="5" cols="50" placeholder="Digite aqui"></textarea>
-
-    </fieldset>
+      <div class="container" id="jobDescriptionDate">
+        <label class="container" for="jobPosition">Cargo: </label>
+        <input class="container" type="text" required name='jobPosition' id="job" maxlength="40">
+        <label class="container" for="jobDescription">Descrição do cargo: </label>
+        <input class="container" type="text" required name='jobDescription' id="jobDescription" maxlength="500">
+      </div>
+        <div id="initialDate" class="container">
+          <label class="container" for="date">Data de início: </label>
+          <input class="container" type="date" required name='date' id="dateOfJob" min="1900-01-01" max="2021-11-26">
+        </div>
+    <div id="divButton" class="container" id="btnDiv">
+      <button class="btn btn-outline-primary" id="btnSubmit" type="submit">Enviar</button>
+      <button class="btn btn-outline-danger" id="btnReset" type="reset">Limpar</button>
+    </div>
+  </form>
   </main>
   <script src="script.js"></script>
 </body>
