--- a/back-end/bloco-19-docker/dia-3-orquestrando-containers-com-docker-compose/missao_trybe.html
+++ b/back-end/bloco-19-docker/dia-3-orquestrando-containers-com-docker-compose/missao_trybe.html
@@ -11,5 +11,26 @@
     Missão da Trybe
   </h1>
   <p>Gerar oportunidade para pessoas</p>
+  <p>Nosso negócio é GENTE! #VQV</p>
 </body>
 </html>
+
+<!-- create a container from apache binding ports 4545:80 -->
+<!-- docker container run -d --name teste -p 4545:80 -v $(pwd):/usr/local/apache2/htdocs httpd:2.4
+ -->
+
+ <!-- stop the container after adding a new p html tag -->
+ <!-- docker container stop (containerID=teste nesse caso) -->
+
+ <!-- inspect the container to see mounts-->
+ <!-- docker container inspect (containerID=teste nesse caso)-->
+
+ <!-- excludes the container -->
+ <!-- docker container rm (containerID=teste nesse caso) -->
+
+<!-- verify your directory -->
+<!-- get the image ID from the server -->
+<!-- docker images (to see all images) -->
+
+<!-- excludes the image -->
+<!-- docker rmi imageID -->
